--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,9 @@
+.box_3rd {
+  width: 1000px; height: 300px;
+  background-color: plum;
+  margin: 10px auto;
+}
+
 .box_2nd {
   width: 1000px; height: 300px;
   background-color: lightgray;
